--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">:Codica</a>
+        <a class="navbar-brand" href="/home/index" style="color: red;">:Codica</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,7 +26,7 @@
               <a class="nav-link disabled">Disabled</a>
             </li>
           </ul>
-          <button type="button" class="btn btn-outline-info">Login</button>
+          <button type="button" onclick="location.href='/users/sign_in'" class="btn btn-outline-info">Login</button>
         </div>
       </div>
     </nav>
