--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -6,17 +6,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
-    <header class="bg-white"> 
-      <%= render "layouts/navbar" %>
-    </header>
-    <main>
-      <%= yield %>
-      <%= render "layouts/footer" %>
-    </main>
+    <%= yield %>
   </body>
 </html>
