--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -558,7 +558,7 @@
             </div>
             <div class="col-lg-7"> 
                 <h2 class="fw-bold text-white">We Offer Advanced Online Scheduling and Patient Management System</h2>
-                <p class="mb-4">                                Duis pharetra venenatis felis, ut tincidunt ipsum consequat nec. Fusce et porttitor libero, eu aliquam nisi. Nam finibus ullamcorper semper.</p><a href="#" class="btn btn-light pb-2 pe-4 ps-4 pt-2">Register Now</a> 
+                <p class="mb-4">                                Duis pharetra venenatis felis, ut tincidunt ipsum consequat nec. Fusce et porttitor libero, eu aliquam nisi. Nam finibus ullamcorper semper.</p><a href="/users/sign_up" class="btn btn-light pb-2 pe-4 ps-4 pt-2">Register Now</a> 
             </div>                         
         </div>                     
     </div>                 
