--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,46 @@
-<h2>Sign up</h2>
+<div class="container-fluid">
+  <div class="row align-items-center">
+    <div class="col-6 border-right bg-primary" style="background-color: rgba(0,0,255,.1)">
+      <div class="min-vh-100 d-flex align-items-center justify-content-center">
+        <a class="align-items-center d-inline-flex fw-bold h4 mb-0 navbar-brand text-uppercase" href="/">
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 100 100" width="5.0em" height="5.0em" class="me-1 text-white" fill="currentColor">
+            <path d="M90 42.301 76.666 19.209l-13.334 7.699V10H36.667v16.908l-13.335-7.699L10 42.301 23.332 50 10 57.698l13.331 23.093 13.335-7.698V90h26.666V73.093l13.334 7.698L90 57.698 76.666 50 90 42.301zm-9.107 17.84-6.666 11.543-17.561-10.138v21.787H43.332V61.546L25.774 71.684l-6.666-11.543L36.667 50 19.108 39.863l6.666-11.549 17.558 10.14V16.667h13.334v21.787l17.561-10.14 6.666 11.549L63.332 50l17.561 10.141z"/>
+          </svg>
+          <span class="h1 text-white">Health Hub</span>
+        </a>
+      </div>
+    </div>
+    
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="col-6 align-self-center">
+      <div class="form-signin w-50 m-auto">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-signin"}) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+        <h1 class="h3 mb-3 fw-normal">Registration</h1>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <div class="form-floating">
+            <%= f.text_field :phone, autofocus: true, autocomplete: "phone", class: 'form-control' %>
+            <%= f.label :phone %>
+          </div>
+
+          <div class="form-floating">
+            
+            <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+            <%= f.label :password %>
+          </div>
+
+          <div class="form-floating">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+            <%= f.label :password_confirmation %><br />
+          </div>
+
+          <div class="actions">
+            <%= f.submit "Sign up", class: 'w-100 btn btn-lg btn-primary' %>
+          </div>
+        <% end %>
+
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
