--- a/app/views/layouts/cabinet_doctor.html.erb
+++ b/app/views/layouts/cabinet_doctor.html.erb
@@ -6,17 +6,23 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
-    <header class="bg-white"> 
-      <%= render "layouts/navbar" %>
-    </header>
-    <main>
-      <%= yield %>
-      <%= render "layouts/footer" %>
-    </main>
+
+<div class="container-fluid">
+    <div class="row flex-nowrap">
+
+        <%= render "cabinet_doctor/blocks/sidebar" %>
+
+        <div class="col py-3">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
