--- a/app/views/layouts/cabinet_patient.html.erb
+++ b/app/views/layouts/cabinet_patient.html.erb
@@ -11,12 +11,16 @@
   </head>
 
   <body>
-    <header class="bg-white"> 
-      <%= render "layouts/navbar" %>
-    </header>
-    <main>
-      <%= yield %>
-      <%= render "layouts/footer" %>
-    </main>
+
+<div class="container-fluid">
+    <div class="row flex-nowrap">
+
+        <%= render "cabinet_patient/blocks/sidebar" %>
+
+        <div class="col py-3">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
