--- a/app/views/cabinet_doctor/appointments/index.html.erb
+++ b/app/views/cabinet_doctor/appointments/index.html.erb
@@ -3,17 +3,14 @@
   <div class="col-10">
     <h1>Appointments</h1>
   </div>
-  <div class="col-2 ">
-    <%= link_to 'New appointments', add_cabinet_patient_appointments_path, class: "btn btn-primary" %>
-  </div>
 </div>
   
 <table class="table">
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Doctor</th>
-      <th scope="col">Department</th>
+      <th scope="col">Patient</th>
+      <th scope="col">Phone</th>
       <th scope="col">Time</th>
       <th scope="col">Status</th>
       <th scope="col">Action</th>
@@ -24,11 +21,11 @@
     <% @appointment.each do |v| %>
       <tr>
         <th scope="row"><%= i += 1 %></th>
-        <td><%= "#{v.doctor.first_name} #{v.doctor.last_name}" %></td>
-        <td><%= v.doctor.department.name %></td>
+        <td><%= "#{v.patient.first_name} #{v.patient.last_name}" %></td>
+        <td><%= v.patient.phone %></td>
         <td><%= v.start_time %></td>
         <td><%= v.status %></td>
-        <td><%= link_to "Datail", cabinet_patient_appointment_path(id: v.id), class: "btn btn-outline-dark" %></td>
+        <td><%= link_to "Close", edit_cabinet_doctor_appointment_path(id: v.id), class: "btn btn-outline-dark #{'disabled' if v.status  == 'closed' }" %></td>
       </tr>
     <% end %>
   </tbody>
