--- a/app/views/cabinet_patient/appointments/show.html.erb
+++ b/app/views/cabinet_patient/appointments/show.html.erb
@@ -1,33 +1,34 @@
 <h3 class="fw-bold h1 mb-3 text-dark">Services</h3>
-  <div class=" justify-content: flex-start">
-    <div class="row mb-2 ">
-      <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="<%= url_for(@appointment.doctor.photo)%>" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/></img>
-          </div>
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Doctor</strong>
-            <h3 class="mb-0"><%= @appointment.doctor.last_name %> <%= @appointment.doctor.first_name %></h3>
-            <div class="mb-1 text-muted">phone: <%= @appointment.doctor.phone %></div>
-            <div class="mb-1 text-muted">email: <%= @appointment.doctor.email %></div>
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
-      </div>
+<div class=" justify-content: flex-start">
+  <div class="row mb-2 ">
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col-auto d-none d-lg-block">
+          <img class="bd-placeholder-img" width="200" height="250" src="<%= url_for(@appointment.doctor.photo)%>" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/></img>
+        </div>
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-primary">Doctor</strong>
+          <h3 class="mb-0"><%= @appointment.doctor.last_name %> <%= @appointment.doctor.first_name %></h3>
+          <div class="mb-1 text-muted">phone: <%= @appointment.doctor.phone %></div>
+          <div class="mb-1 text-muted">email: <%= @appointment.doctor.email %></div>
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+        </div>
+      </siv>
     </div>
-      <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Hospital</strong>
-            <h3 class="mb-0">Walkin Clinic Nyc</h3>
-            <div class="mb-1 text-muted">phone: +0-123-456-789</div>
-            <div class="mb-1 text-muted">Our Location: Fairground Ave., New York</div>
-            <div class="mb-1 text-muted">email: hospital@mail.com</div>
-            <p class="card-text mb-auto">A walk-in clinic (also known as a walk-in centre) is a medical facility that accepts patients on a walk-in basis and with no appointment required</p>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="http://www.nymc.edu/media/schools-and-colleges/nymc/images/press-releases-images/HHC-Lincoln.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/></img>
-          </div>
+  </div>
+  <div class="col-md-6">
+    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+      <div class="col p-4 d-flex flex-column position-static">
+        <strong class="d-inline-block mb-2 text-primary">Hospital</strong>
+        <h3 class="mb-0">Walkin Clinic Nyc</h3>
+        <div class="mb-1 text-muted">phone: +0-123-456-789</div>
+        <div class="mb-1 text-muted">Our Location: Fairground Ave., New York</div>
+        <div class="mb-1 text-muted">email: hospital@mail.com</div>
+        <p class="card-text mb-auto">A walk-in clinic (also known as a walk-in centre) is a medical facility that accepts patients on a walk-in basis and with no appointment required</p>
+      </div>
+      <div class="col-auto d-none d-lg-block">
+        <img class="bd-placeholder-img" width="200" height="250" src="http://www.nymc.edu/media/schools-and-colleges/nymc/images/press-releases-images/HHC-Lincoln.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/></img>
+      </div>
     </div>
   </div>
 </div>
