--- a/app/views/cabinet_patient/blocks/_sidebar.html.erb
+++ b/app/views/cabinet_patient/blocks/_sidebar.html.erb
@@ -1,37 +1,23 @@
 <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
-            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-<a class="align-items-center d-inline-flex fw-bold h4 mb-0 navbar-brand text-uppercase" href="/">
-          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 100 100" width="2.5em" height="2.5em" class="me-1" fill="currentColor">
-            <path d="M90 42.301 76.666 19.209l-13.334 7.699V10H36.667v16.908l-13.335-7.699L10 42.301 23.332 50 10 57.698l13.331 23.093 13.335-7.698V90h26.666V73.093l13.334 7.698L90 57.698 76.666 50 90 42.301zm-9.107 17.84-6.666 11.543-17.561-10.138v21.787H43.332V61.546L25.774 71.684l-6.666-11.543L36.667 50 19.108 39.863l6.666-11.549 17.558 10.14V16.667h13.334v21.787l17.561-10.14 6.666 11.549L63.332 50l17.561 10.141z"/>
-          </svg>
-          <span class="text-white">Health Hub</span>
-        </a>
-        <hr>
-                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                    <li class="nav-item">
-                        <a href= "#" class="nav-link align-middle px-0">
-                            <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="<%= cabinet_patient_appointments_path %>" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Orders</span></a>
-                    </li>
-                        <a href="<%= add_cabinet_patient_appointments_path %>" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Products</span> </a>
-                            <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="<%= edit_user_registration_path %>" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Customers</span> </a>
-                    </li>
-                </ul>
-                <hr>
-                <div class="dropdown pb-4">
-                  <%= button_to destroy_user_session_path, method: :delete, class: "nav-link px-0 align-middle btn btn-link" do %>
-                    <i class="fs-4 bi bi-box-arrow-right"></i> <span class="ms-1 d-none d-sm-inline">Logout</span>
-                  <% end %>
-                </div>
-            </div>
-        </div>
+  <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+    <a class="align-items-center d-inline-flex fw-bold h4 mb-0 navbar-brand text-uppercase" href="/">
+      <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 100 100" width="2.5em" height="2.5em" class="me-1" fill="currentColor">
+        <path d="M90 42.301 76.666 19.209l-13.334 7.699V10H36.667v16.908l-13.335-7.699L10 42.301 23.332 50 10 57.698l13.331 23.093 13.335-7.698V90h26.666V73.093l13.334 7.698L90 57.698 76.666 50 90 42.301zm-9.107 17.84-6.666 11.543-17.561-10.138v21.787H43.332V61.546L25.774 71.684l-6.666-11.543L36.667 50 19.108 39.863l6.666-11.549 17.558 10.14V16.667h13.334v21.787l17.561-10.14 6.666 11.549L63.332 50l17.561 10.141z"/>
+      </svg>
+      <span class="text-white">Health Hub</span>
+    </a>
+    <hr>
+    <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+      <li>
+        <a href="<%= cabinet_patient_appointments_path %>" class="nav-link px-0 align-middle">
+        <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Appointments</span></a>
+      </li>
+    </ul>
+    <hr>
+    <div class="dropdown pb-4">
+      <%= button_to destroy_user_session_path, method: :delete, class: "nav-link px-0 align-middle btn btn-link" do %>
+        <i class="fs-4 bi bi-box-arrow-right"></i> <span class="ms-1 d-none d-sm-inline">Logout</span>
+      <% end %>
+    </div>
+  </div>
+</div>
